# ats-analyzer

./: .eslintrc.json  .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  README.md  env.example  requirements.txt  start-dev.sh  vercel.json
.github/workflows/: ci.yml
backend/: Dockerfile.dev  alembic.ini  main.py  pyproject.toml  requirements.txt  run_dev.sh
backend/ats_analyzer/: __init__.py  db.py  deps.py  main.py
backend/ats_analyzer/api/: __init__.py  dto.py  routes.py
backend/ats_analyzer/core/: __init__.py  config.py  errors.py  logging.py
backend/ats_analyzer/data/: cue_lexicon.json  skills_taxonomy.json
backend/ats_analyzer/models/: __init__.py  base.py
backend/ats_analyzer/services/: __init__.py  extract.py  jd.py  lint.py  match.py  openai_analyzer.py  parse.py  score.py  sectionizer.py
backend/config/: scoring.yaml
backend/migrations/: env.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_extract.py  test_parse.py  test_score.py
frontend/: Dockerfile.dev  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/__tests__/components/: FileDrop.test.tsx
frontend/__tests__/lib/: utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx  page.tsx.backup
frontend/components/: EvidencePanel.tsx  FileDrop.tsx  LoadingState.tsx  ScoreCard.tsx  WarningsList.tsx
frontend/e2e/: analyzer.spec.ts
frontend/lib/: api.ts  types.ts  utils.ts
infra/: README.md  docker-compose.dev.yml  init-db.sql
